examples/exploit-examples/klee-out-0/test000002.exec.err
Error: AEG: Find a possible exploit
File: t1.c
Line: 94
assembly.ll line: 8946
Stack: 
	#000008946 in __klee_posix_wrapped_main (=1, =93825042271376) at t1.c:94
	#100007094 in __user_main (=1, =93825040160768, =93825040160784) at runtime/POSIX/klee_init_env.c:245
	#200000544 in __uClibc_main (=93825040253448, =1, =93825040160768, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#300000709 in main (=1, =93825040160768)
